// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`snyk-api-import import:data <...>\` Shows error when missing  1`] = `
[Error: Command failed: node ./dist/index.js import:data --source=github
Debugger attached.
index.js import:data

Generate data required for targets to be imported via API to create Snyk
projects.


Options:
  --version          Show version number                               [boolean]
  --help             Show help                                         [boolean]
  --orgsData         Path to organizations data file generated with
                     "orgs:create" command                            [required]
  --source           The source of the targets to be imported e.g. Github,
                     Github Enterprise, Gitlab, Azure. This will be used to make
                     an API call to list all available entities per org
    [required] [choices: "github", "github-enterprise", "gitlab", "azure-repos",
                                         "bitbucket-server"] [default: "github"]
  --sourceUrl        Custom base url for the source API that can list
                     organizations (e.g. Github Enterprise url)
  --integrationType  The configured integration type on the created Snyk Org to
                     use for generating import targets data. Applies to all
                     targets.
    [required] [choices: "github", "github-enterprise", "gitlab", "azure-repos",
                                                             "bitbucket-server"]

Missing required arguments: orgsData, integrationType
Waiting for the debugger to disconnect...
]
`;

exports[`\`snyk-api-import import:data <...>\` Shows error when missing  2`] = `
"Debugger attached.
index.js import:data

Generate data required for targets to be imported via API to create Snyk
projects.


Options:
  --version          Show version number                               [boolean]
  --help             Show help                                         [boolean]
  --orgsData         Path to organizations data file generated with
                     \\"orgs:create\\" command                            [required]
  --source           The source of the targets to be imported e.g. Github,
                     Github Enterprise, Gitlab, Azure. This will be used to make
                     an API call to list all available entities per org
    [required] [choices: \\"github\\", \\"github-enterprise\\", \\"gitlab\\", \\"azure-repos\\",
                                         \\"bitbucket-server\\"] [default: \\"github\\"]
  --sourceUrl        Custom base url for the source API that can list
                     organizations (e.g. Github Enterprise url)
  --integrationType  The configured integration type on the created Snyk Org to
                     use for generating import targets data. Applies to all
                     targets.
    [required] [choices: \\"github\\", \\"github-enterprise\\", \\"gitlab\\", \\"azure-repos\\",
                                                             \\"bitbucket-server\\"]

Missing required arguments: orgsData, integrationType
Waiting for the debugger to disconnect...
"
`;

exports[`\`snyk-api-import import:data <...>\` Shows help text as expected 1`] = `
"index.js import:data

Generate data required for targets to be imported via API to create Snyk
projects.


Options:
  --version          Show version number                               [boolean]
  --help             Show help                                         [boolean]
  --orgsData         Path to organizations data file generated with
                     \\"orgs:create\\" command                            [required]
  --source           The source of the targets to be imported e.g. Github,
                     Github Enterprise, Gitlab, Azure. This will be used to make
                     an API call to list all available entities per org
    [required] [choices: \\"github\\", \\"github-enterprise\\", \\"gitlab\\", \\"azure-repos\\",
                                         \\"bitbucket-server\\"] [default: \\"github\\"]
  --sourceUrl        Custom base url for the source API that can list
                     organizations (e.g. Github Enterprise url)
  --integrationType  The configured integration type on the created Snyk Org to
                     use for generating import targets data. Applies to all
                     targets.
    [required] [choices: \\"github\\", \\"github-enterprise\\", \\"gitlab\\", \\"azure-repos\\",
                                                             \\"bitbucket-server\\"]"
`;
